--- a/src/components/Navigation/NavigationDrawer.css
+++ b/src/components/Navigation/NavigationDrawer.css
@@ -1,5 +1,5 @@
 .Navigation-filler--div {
-  margin-top: 4em;
+  margin-top: 5em;
 }
 
 .Navigation--selected {
